fix: overflow x

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -60,6 +60,7 @@
     display: flex;
     flex-direction: column;
     font-family: 'Montserrat', sans-serif;
+    overflow-x: hidden;
   }
   
   /*
